ci/master/3_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tekoapp-backend
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: prod-tekoapp.com.py
      http:
        paths:
          - path: /tekoapp-backend/api
            pathType: Prefix
            backend:
              service:
                name: service-tekoapp-backend
                port:
                  number: 10005
